Changed the GlobalHandlerAdvice controller package into the Exception. Added new Exception Thrower for handling null types. Eliminated comments as the base code its self explained by the variable names