@@ -10,8 +10,6 @@ import gym.crm.backend.domain.response.trainee.TrainersTraineeResponse;
 import gym.crm.backend.repository.TraineeRepository;
 import gym.crm.backend.repository.TrainerRepository;
 import gym.crm.backend.repository.UserRepository;
-import gym.crm.backend.util.UserUtil;
-import io.micrometer.core.instrument.MeterRegistry;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
@@ -20,6 +18,7 @@ import org.mockito.MockitoAnnotations;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
+import gym.crm.backend.exception.types.notFound.ProfileNotFoundException;
 
 import java.util.*;
 
@@ -35,13 +34,11 @@ class TraineeServiceTest {
     private TrainerRepository trainerRepository;
 
     @Mock
-    private UserUtil userUtil;
-
-    @Mock
-    private MeterRegistry registry;
-
-    @Mock
     private UserRepository userRepository;
+
+    @Mock
+    private UserCredentialService userCredentialService;
+
 
     @InjectMocks
     private TraineeService traineeService;
@@ -51,150 +48,165 @@ class TraineeServiceTest {
         MockitoAnnotations.openMocks(this);
     }
 
-@Test
-void createTrainee_Success() {
-    TraineeCreationRequest request = new TraineeCreationRequest();
-    request.setFirstName("John");
-    request.setLastName("Doe");
-    request.setAddress("123 Main St");
-    List<Trainee> trainees = new ArrayList<>();
-    when(traineeRepository.findAll()).thenReturn(trainees);
-    when(userUtil.generateUsername(anyString(), anyString(), anyList())).thenReturn("johndoe");
-    when(userUtil.generatePassword()).thenReturn("password123");
-    when(traineeRepository.save(any(Trainee.class))).thenReturn(new Trainee());
-
-    io.micrometer.core.instrument.Timer mockTimer = mock(io.micrometer.core.instrument.Timer.class);
-    when(registry.timer("training_processing_time")).thenReturn(mockTimer);
-
-    UserCreationResponse response = traineeService.createTrainee(request);
-
-    assertEquals("johndoe", response.getUsername());
-    assertEquals("password123", response.getPassword());
-}
-
     @Test
-    void createTrainee_Failure_GenerateUsername() {
+    void createTrainee_Success() {
         TraineeCreationRequest request = new TraineeCreationRequest();
         request.setFirstName("John");
         request.setLastName("Doe");
-        List<Trainee> trainees = new ArrayList<>();
-        when(traineeRepository.findAll()).thenReturn(trainees);
-        when(userUtil.generateUsername(anyString(), anyString(), anyList())).thenReturn("");
+        request.setAddress("123 Main St");
 
-        assertThrows(RuntimeException.class, () -> traineeService.createTrainee(request));
-    }
+        when(userCredentialService.generateUsername(anyString(), anyString())).thenReturn("johndoe");
+        when(userCredentialService.generatePassword()).thenReturn("password123");
+        when(traineeRepository.save(any(Trainee.class))).thenReturn(new Trainee());
 
-    @Test
-    void createTrainee_Failure_GeneratePassword() {
-        TraineeCreationRequest request = new TraineeCreationRequest();
-        request.setFirstName("John");
-        request.setLastName("Doe");
-        List<Trainee> trainees = new ArrayList<>();
-        when(traineeRepository.findAll()).thenReturn(trainees);
-        when(userUtil.generateUsername(anyString(), anyString(), anyList())).thenReturn("johndoe");
-        when(userUtil.generatePassword()).thenReturn(null);
+        UserCreationResponse response = traineeService.createTrainee(request);
 
-        assertThrows(RuntimeException.class, () -> traineeService.createTrainee(request));
+        assertEquals("johndoe", response.getUsername());
+        assertEquals("password123", response.getPassword());
     }
 
     @Test
     void getTraineeByUsername_Success() {
+        String username = "johndoe";
         Trainee trainee = new Trainee();
+        trainee.setTrainers(new HashSet<>());
         User user = new User();
-        user.setFirstName("John");
-        user.setUsername("johndoe");
+        user.setFirstName("john");
+        user.setUsername(username);
         trainee.setUser(user);
-        trainee.setTrainers(Collections.emptySet());
-        when(traineeRepository.findByUserUsername(anyString())).thenReturn(Optional.of(trainee));
 
-        TraineeGetProfileResponse response = traineeService.getTraineeByUsername("johndoe");
+        when(traineeRepository.findByUserUsername(username)).thenReturn(Optional.of(trainee));
 
-        assertEquals("John", response.getFirstName());
+        TraineeGetProfileResponse response = traineeService.getTraineeByUsername(username);
+
+        assertNotNull(response);
+        assertEquals("john", response.getFirstName());
+    }
+
+    @Test
+    void getTraineeByUsername_NotFound() {
+        String username = "unknown";
+
+        when(traineeRepository.findByUserUsername(username)).thenReturn(Optional.empty());
+
+        assertThrows(ProfileNotFoundException.class, () -> traineeService.getTraineeByUsername(username));
     }
 
     @Test
     void updateTrainee_Success() {
-        Trainee trainee = new Trainee();
-        User user = new User();
-        user.setUsername("johndoe");
-        trainee.setUser(user);
-        trainee.setTrainers(Collections.emptySet());
-        when(traineeRepository.findByUserUsername(anyString())).thenReturn(Optional.of(trainee));
-        when(traineeRepository.save(any(Trainee.class))).thenReturn(trainee);
-
+        String username = "johndoe";
         TraineeUpdateRequest request = new TraineeUpdateRequest();
         request.setFirstName("John");
         request.setLastName("Doe");
         request.setAddress("123 Main St");
 
-        TraineeUpdateResponse response = traineeService.updateTrainee("johndoe", request);
+        Trainee trainee = new Trainee();
+        trainee.setTrainers(new HashSet<>());
+        User user = new User();
+        user.setUsername(username);
+        trainee.setUser(user);
 
+        when(traineeRepository.findByUserUsername(username)).thenReturn(Optional.of(trainee));
+        when(traineeRepository.save(any(Trainee.class))).thenReturn(trainee);
+
+        TraineeUpdateResponse response = traineeService.updateTrainee(username, request);
+
+        assertNotNull(response);
         assertEquals("John", response.getFirstName());
         assertEquals("Doe", response.getLastName());
     }
 
     @Test
-    void deleteTrainee_Success() {
-        Trainee trainee = new Trainee();
-        User user = new User();
-        user.setUsername("johndoe");
-        trainee.setUser(user);
-        trainee.setTrainings(Collections.emptySet());
-        trainee.setTrainers(new HashSet<>());
-        when(traineeRepository.findByUserUsername(anyString())).thenReturn(Optional.of(trainee));
+    void updateTrainee_NotFound() {
+        String username = "unknown";
+        TraineeUpdateRequest request = new TraineeUpdateRequest();
 
-        traineeService.deleteTrainee("johndoe");
+        when(traineeRepository.findByUserUsername(username)).thenReturn(Optional.empty());
+
+        assertThrows(ProfileNotFoundException.class, () -> traineeService.updateTrainee(username, request));
+    }
+
+    @Test
+    void deleteTrainee_Success() {
+        String username = "johndoe";
+        Trainee trainee = new Trainee();
+        trainee.setTrainers(new HashSet<>());
+        User user = new User();
+        user.setUsername(username);
+        trainee.setUser(user);
+
+        when(traineeRepository.findByUserUsername(username)).thenReturn(Optional.of(trainee));
+
+        traineeService.deleteTrainee(username);
 
         verify(traineeRepository, times(1)).delete(trainee);
     }
 
     @Test
     void deleteTrainee_NotFound() {
-        when(traineeRepository.findByUserUsername(anyString())).thenReturn(Optional.empty());
+        String username = "unknown";
 
-        assertThrows(RuntimeException.class, () -> traineeService.deleteTrainee("johndoe"));
+        when(traineeRepository.findByUserUsername(username)).thenReturn(Optional.empty());
+
+        assertThrows(ProfileNotFoundException.class, () -> traineeService.deleteTrainee(username));
     }
 
     @Test
     void getTrainersNotInTrainersTraineeListByTraineeUserUsername_Success() {
-        Trainer trainer = new Trainer();
+        String traineeUsername = "johndoe";
+        Trainee trainee = new Trainee();
         User user = new User();
-        user.setUsername("trainer1");
-        trainer.setUser(user);
-        trainer.setSpecialization(new TrainingType(1L, TrainingTypes.RESISTANCE, Collections.emptySet(), Collections.emptySet()));
+        user.setUsername(traineeUsername);
+        trainee.setUser(user);
 
-        Page<Trainer> trainers = new PageImpl<>(List.of(trainer));
-        when(traineeRepository.findByUserUsername("johndoe")).thenReturn(Optional.of(new Trainee()));
-        when(traineeRepository.findTrainersNotInTrainersTraineeListByTraineeUserUsername("johndoe", Pageable.unpaged())).thenReturn(trainers);
+        Trainer trainer = new Trainer();
+        trainer.setTrainees(new HashSet<>());
+        trainer.setSpecialization(new TrainingType());
+        User trainerUser = new User();
+        trainerUser.setUsername("trainer1");
+        trainer.setUser(trainerUser);
+        Page<Trainer> trainers = new PageImpl<>(Collections.singletonList(trainer));
 
-        Page<TrainersTraineeResponse> response = traineeService.getTrainersNotInTrainersTraineeListByTraineeUserUsername("johndoe", Pageable.unpaged());
+        when(traineeRepository.findByUserUsername(traineeUsername)).thenReturn(Optional.of(trainee));
+        when(traineeRepository.findTrainersNotInTrainersTraineeListByTraineeUserUsername(anyString(), any(Pageable.class))).thenReturn(trainers);
 
+        Page<TrainersTraineeResponse> response = traineeService.getTrainersNotInTrainersTraineeListByTraineeUserUsername(traineeUsername, Pageable.unpaged());
+
+        assertNotNull(response);
         assertEquals(1, response.getTotalElements());
-        assertEquals("trainer1", response.stream().toList().getFirst().getTrainerUsername());
     }
 
     @Test
     void updateTrainersTraineeList_Success() {
+        String username = "johndoe";
+        List<String> trainerUsernames = Arrays.asList("trainer1", "trainer2");
+
         Trainee trainee = new Trainee();
+        trainee.setTrainers(new HashSet<>());
         User user = new User();
-        user.setUsername("johndoe");
+        user.setUsername(username);
         trainee.setUser(user);
-        when(traineeRepository.findByUserUsername(anyString())).thenReturn(Optional.of(trainee));
-        List<Trainer> trainers = new ArrayList<>();
-        Trainer trainer = new Trainer();
-        trainer.setSpecialization(new TrainingType(1L, TrainingTypes.RESISTANCE, new HashSet<>(), new HashSet<>()));
-        trainer.setTrainees(new HashSet<>());
-        User trainerUser = new User();
-        trainerUser.setUsername("trainer1");
-        trainer.setUser(trainerUser);
-        trainers.add(trainer);
-        when(trainerRepository.findAll()).thenReturn(trainers);
 
-        List<String> trainerUsernames = List.of("trainer1");
-        Set<TrainersTraineeResponse> response = traineeService.updateTrainersTraineeList("johndoe", trainerUsernames);
+        Trainer trainer1 = new Trainer();
+        trainer1.setTrainees(new HashSet<>());
+        trainer1.setSpecialization(new TrainingType());
+        User trainerUser1 = new User();
+        trainerUser1.setUsername("trainer1");
+        trainer1.setUser(trainerUser1);
 
-        assertEquals(1, response.size());
-        assertEquals("trainer1", response.stream().toList().getFirst().getTrainerUsername());
-        verify(traineeRepository, times(1)).save(trainee);
+        Trainer trainer2 = new Trainer();
+        trainer2.setTrainees(new HashSet<>());
+        trainer2.setSpecialization(new TrainingType());
+        User trainerUser2 = new User();
+        trainerUser2.setUsername("trainer2");
+        trainer2.setUser(trainerUser2);
+
+        when(traineeRepository.findByUserUsername(username)).thenReturn(Optional.of(trainee));
+        when(trainerRepository.findAll()).thenReturn(Arrays.asList(trainer1, trainer2));
+
+        Set<TrainersTraineeResponse> response = traineeService.updateTrainersTraineeList(username, trainerUsernames);
+
+        assertNotNull(response);
+        assertEquals(2, response.size());
     }
 }
